# BatchGrader

./: .coverage  .gitignore  README.md  batch_runner.py  coverage.xml  junit.xml  package.json  pyproject.toml  pytest.ini  requirements.txt
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
config/: config.yaml.example  prompts.yaml.example
docs/: BATCH_API_REFERENCE.md  CHANGELOG.md  application_flow.md  architecture.md  architecture_graphviz.md  code_review.md  codebase_best_practices.md  codereview.md  diagramsLULE.md  directory_restructure.md  pricing.csv
docs/completed_reviews_old_docs/: code_review51525.md  previous_patchnotes.md  scratchpad_stale.md
output/logs/: .keep
src/: batch_job.py  batch_runner.py  cli.py  config_loader.py  constants.py  cost_estimator.py  data_loader.py  evaluator.py  exceptions.py  file_processor.py  file_utils.py  input_splitter.py  llm_client.py  llm_utils.py  log_utils.py  logger.py  prompt_utils.py  rich_display.py  token_tracker.py  token_utils.py  utils.py
src/batchgrader/: __init__.py  batch_job.py  batch_runner.py  cli.py  config_loader.py  constants.py  cost_estimator.py  data_loader.py  evaluator.py  exceptions.py  file_processor.py  file_utils.py  input_splitter.py  llm_client.py  llm_utils.py  log_utils.py  logger.py  prompt_utils.py  rich_display.py  token_tracker.py  token_utils.py  utils.py
tests/: __init__.py  conftest.py  corrrupt.csv  replace_csv_values.py  run_all_tests.py  test_batch_job.py  test_batch_runner.py  test_check_token_limits.py  test_cli.py  test_cli_additional.py  test_config_continue_on_failure.yaml  test_config_forced_chunk.yaml  test_config_loader.py  test_config_token_chunk.yaml  test_constants.py  test_cost_estimator.py  test_data_loader.py  test_evaluator.py  test_exceptions.py  test_file_processor.py  test_file_processor_additional.py  test_file_processor_common_paths.py  test_file_utils.py  test_helpers.py  test_input_splitter.py  test_llm_client.py  test_llm_utils.py  test_log_utils.py  test_logger.py  test_prompt_utils.py  test_rich_display.py  test_splitter.py  test_token_tracker.py  test_token_utils.py  test_utils.py  testing_agenda.md  testing_info.md
tests/config/: config_continue_multi_chunk_failure.yaml  test_config_concurrency.yaml  test_config_continue_on_failure.yaml  test_config_halt_on_failure.yaml  test_config_legacy.yaml  test_config_reprocessing.yaml
tests/input/: chunk_with_failure.csv  chunking_large.csv  large_chunk.csv  malformed_config.yaml  original_input_for_reprocessing_TEMP.csv  previous_output_with_errors_TEMP.csv  small_legacy.csv
tests/input/_chunked/: chunking_large_forcedchunk_1_of_3_vem6s7e5.csv  chunking_large_forcedchunk_2_of_3_kg_dw5qm.csv  chunking_large_forcedchunk_3_of_3__3h627oc.csv
tests/logs/: .keep
tests/small_utilities/: replace_csv_values.py
