[project]
name = "batchgrader"
version = "0.6.1.0"
description = "Batch processing tool for evaluating text using OpenAI's API"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "annotated-types>=0.7.0,<0.8.0",
  "anyio>=4.9.0,<5.0.0",
  "backports-tarfile>=1.2.0",
  "cachecontrol>=0.14.3",
  "certifi>=2025.4.26",
  "charset-normalizer>=3.4.2",
  "cleo>=2.1.0,<3.0.0",
  "colorama>=0.4.6,<0.5.0",
  "crashtest>=0.4.1,<0.5.0",
  "distlib>=0.3.9,<0.4.0",
  "distro>=1.9.0,<2.0.0",
  "dulwich>=0.22.8,<0.23.0",
  "exceptiongroup>=1.3.0,<2.0.0",
  "fastjsonschema>=2.21.1,<3.0.0",
  "filelock>=3.18.0,<4.0.0",
  "findpython>=0.6.3,<0.7.0",
  "h11>=0.16.0,<0.17.0",
  "httpcore>=1.0.9,<2.0.0",
  "httpx>=0.28.1,<0.29.0",
  "idna>=3.10,<4.0",
  "importlib-metadata>=8.7.0,<9.0.0",
  "iniconfig>=2.1.0,<3.0.0",
  "jaraco-classes>=3.4.0,<4.0.0",
  "jaraco-context>=6.0.1,<7.0.0",
  "jaraco-functools>=4.1.0,<5.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "jiter>=0.9.0,<0.10.0",
  "keyring>=25.6.0,<26.0.0",
  "loguru>=0.7.3,<0.8.0",
  "markdown-it-py>=3.0.0,<4.0.0",
  "markupsafe>=3.0.2,<4.0.0",
  "mdurl>=0.1.2,<0.2.0",
  "more-itertools>=10.7.0,<11.0.0",
  "msgpack>=1.1.0,<2.0.0",
  "numpy>=2.2.5,<3.0.0",
  "openai>=1.78.0,<2.0.0",
  "packaging>=25.0,<26.0",
  "pandas>=2.2.3,<3.0.0",
  "pbs-installer>=2025.4.9,<2026.0.0",
  "pip>=25.0.1,<26.0.0",
  "pkginfo>=1.12.1,<2.0.0",
  "platformdirs>=4.3.8,<5.0.0",
  "pluggy>=1.6.0,<2.0.0",
  "poetry>=2.1.3,<3.0.0",
  "poetry-core>=2.1.3,<3.0.0",
  "pydantic>=2.11.4,<3.0.0",
  "pydantic-core>=2.33.2,<3.0.0",
  "pygments>=2.19.1,<3.0.0",
  "pylint-venv>=3.0.4,<4.0.0",
  "pyproject-hooks>=1.2.0,<2.0.0",
  "python-dateutil>=2.9.0,<3.0.0",
  "python-dotenv>=1.1.0,<2.0.0",
  "pytz>=2025.2,<2026.0",
  "pywin32-ctypes>=0.2.3,<0.3.0",
  "pyyaml (==6.0.2)",
  "rapidfuzz>=3.13.0,<4.0.0",
  "regex>=2024.11.6,<2025.0.0",
  "requests>=2.32.3,<3.0.0",
  "requests-toolbelt>=1.0.0,<2.0.0",
  "rich>=14.0.0,<15.0.0",
  "shellingham>=1.5.4,<2.0.0",
  "six>=1.17.0,<2.0.0",
  "sniffio>=1.3.1,<2.0.0",
  "tenacity>=8.5.0,<9.0.0",
  "tiktoken>=0.9.0,<0.10.0",
  "tomli>=2.2.1,<3.0.0",
  "tomlkit>=0.13.2,<0.14.0",
  "tqdm>=4.67.1,<5.0.0",
  "trove-classifiers>=2025.5.9,<2026.0.0",
  "typing-extensions>=4.13.2,<5.0.0",
  "typing-inspection>=0.4.0,<0.5.0",
  "tzdata>=2025.2,<2026.0",
  "urllib3>=2.4.0,<3.0.0",
  "virtualenv>=20.31.2,<21.0.0",
  "win32-setctime>=1.2.0,<2.0.0",
  "zipp>=3.21.0,<4.0.0",
  "zstandard>=0.23.0,<0.24.0",
  "asyncio (>=3.4.3,<4.0.0)",
  "pytest-asyncio (>=0.26.0,<0.27.0)",
  "pytest-cov (>=6.1.1,<7.0.0)",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.26.0,<0.27.0",
  "pytest-cov>=6.1.1,<7.0.0",
  "pytest-mock>=3.14.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/batchgrader"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "batchgrader", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.5,<9.0.0"
pytest-cov = ">=6.1.1,<7.0.0"
pytest-mock = ">=3.14.0,<4.0.0"
pytest-asyncio = ">=0.26.0,<0.27.0"
